// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkSelector should match snapshot when account connected to Boba (Sepolia) 1`] = `
<DocumentFragment>
  <div
    class="sc-gFqAkR kUbaAB dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-ikkxIA bvEfJd dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    >
      <div
        class="sc-fUnMCh jySLNu"
      >
        <div
          class="sc-dAbbOL ACNsH"
        >
          <img
            alt="token"
            src="bobaEth.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-dhKdcB jSXfaR"
        >
          Boba (Sepolia)
        </p>
        <div
          class="sc-jsJBEP hOLTkK dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkSelector should match snapshot when account connected to Boba (Sepolia) 2`] = `
<DocumentFragment>
  <div
    class="sc-gFqAkR kUbaAB dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-ikkxIA fydrhM dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    >
      <div
        class="sc-fUnMCh jySLNu"
      >
        <div
          class="sc-dAbbOL ACNsH"
        >
          <img
            alt="token"
            src="bobaEth.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-dhKdcB jSXfaR"
        >
          Boba (Sepolia)
        </p>
        <div
          class="sc-jsJBEP hOLTkK dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-hmdomO iBZDnJ"
    >
      <div
        class="sc-bXCLTC cnZnBu"
      >
        <div
          class="sc-feUZmu cWlxKB dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          Networks
        </div>
        <div
          class="sc-fUnMCh gRWBIx dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div
            class="sc-dAbbOL ACNsH"
          >
            <img
              alt="token"
              src="bobaEth.svg"
              width="20px"
            />
          </div>
          Boba (Sepolia)
        </div>
        <div
          class="sc-fUnMCh jySLNu dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div
            class="sc-dAbbOL ACNsH"
          >
            <img
              alt="token"
              src="bobaBNB.svg"
              width="20px"
            />
          </div>
          Boba BNB Testnet
        </div>
        <div
          class="sc-fUnMCh jySLNu dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div
            class="sc-dAbbOL ACNsH"
          >
            <img
              alt="token"
              src="optimism.svg"
              width="20px"
            />
          </div>
          Optimism (Sepolia)
        </div>
        <div
          class="sc-fUnMCh jySLNu dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div
            class="sc-dAbbOL ACNsH"
          >
            <img
              alt="token"
              src="arbitrum.svg"
              width="20px"
            />
          </div>
          Arbitrum (Sepolia)
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkSelector should match snapshot when account connected to Ethereum Mainnet 1`] = `
<DocumentFragment>
  <div
    class="sc-gFqAkR kUbaAB dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-ikkxIA bvEfJd dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    >
      <div
        class="sc-fUnMCh jySLNu"
      >
        <div
          class="sc-dAbbOL ACNsH"
        >
          <img
            alt="token"
            src="ethereum.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-dhKdcB jSXfaR"
        >
          Ethereum
        </p>
        <div
          class="sc-jsJBEP hOLTkK dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkSelector should match snapshot when account connected to Ethereum Mainnet 2`] = `
<DocumentFragment>
  <div
    class="sc-gFqAkR kUbaAB dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-ikkxIA fydrhM dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
    >
      <div
        class="sc-fUnMCh jySLNu"
      >
        <div
          class="sc-dAbbOL ACNsH"
        >
          <img
            alt="token"
            src="ethereum.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-dhKdcB jSXfaR"
        >
          Ethereum
        </p>
        <div
          class="sc-jsJBEP hOLTkK dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-hmdomO iBZDnJ"
    >
      <div
        class="sc-bXCLTC cnZnBu"
      >
        <div
          class="sc-feUZmu cWlxKB dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          Networks
        </div>
        <div
          class="sc-fUnMCh gRWBIx dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div
            class="sc-dAbbOL ACNsH"
          >
            <img
              alt="token"
              src="ethereum.svg"
              width="20px"
            />
          </div>
          Ethereum
        </div>
        <div
          class="sc-fUnMCh jySLNu dropdown sc-dtInlm sc-kOPcWz iSOFgg kDoMup"
        >
          <div
            class="sc-dAbbOL ACNsH"
          >
            <img
              alt="token"
              src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/bnb.svg"
              width="20px"
            />
          </div>
          Binance Smart Chain
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
